Finished writing the hero section

--- a/index.html
+++ b/index.html
@@ -7,5 +7,23 @@
   </head>
 
   <body>
+    <section class="hero-section">
+      <div class="header">
+        <h3>Header Logo</h3>
+        <ul>
+          <li>header link one</li>
+          <li>header link two</li>
+          <li>header link three</li>
+        </ul>
+      </div>
+      <div class="hero-content">
+        <div class="hero-text">
+          <h1>This website is awesome</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quasi optio natus reprehenderit aspernatur tempore quas distinctio nihil itaque. Voluptatem, veritatis quas! A provident recusandae facere nesciunt dolor animi eius.</p>
+          <button  class="button" type="button">Sign up</button>
+        </div>
+        <img src="" alt="image">
+      </div>
+    </section>
   </body>
 </html>
