--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <section class="hero-section">
+    <section class="first-section">
       <div class="header">
         <h3>Header Logo</h3>
         <ul>
@@ -16,13 +16,33 @@
           <li>header link three</li>
         </ul>
       </div>
-      <div class="hero-content">
+      <div class="hero-section">
         <div class="hero-text">
           <h1>This website is awesome</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quasi optio natus reprehenderit aspernatur tempore quas distinctio nihil itaque. Voluptatem, veritatis quas! A provident recusandae facere nesciunt dolor animi eius.</p>
           <button  class="button" type="button">Sign up</button>
         </div>
         <img src="" alt="image">
+      </div>
+    </section>
+
+    <section class="second-section">
+      <h2>Some random information</h2>
+      <div>
+        <div class="square"></div>
+        <p>This is some subtext under an illustration or image</p>
+      </div>
+      <div>
+        <div class="square"></div>
+        <p>This is some subtext under an illustration or image</p>
+      </div>
+      <div>
+        <div class="square"></div>
+        <p>This is some subtext under an illustration or image</p>
+      </div>
+      <div>
+        <div class="square"></div>
+        <p>This is some subtext under an illustration or image</p>
       </div>
     </section>
   </body>
