--- a/index.html
+++ b/index.html
@@ -45,5 +45,12 @@
         <p>This is some subtext under an illustration or image</p>
       </div>
     </section>
+
+    <section class="third-section">
+      <div class="testimonial">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p>-Thor, God of Thunder</p>
+      </div>
+    </section>
   </body>
 </html>
