--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="hero-text">
           <h1>This website is awesome</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quasi optio natus reprehenderit aspernatur tempore quas distinctio nihil itaque. Voluptatem, veritatis quas! A provident recusandae facere nesciunt dolor animi eius.</p>
-          <button  class="button" type="button">Sign up</button>
+          <button class="button" type="button">Sign up</button>
         </div>
         <img src="" alt="image">
       </div>
@@ -50,6 +50,16 @@
       <div class="testimonial">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p>-Thor, God of Thunder</p>
+      </div>
+    </section>
+
+    <section class="fourth-section">
+      <div class="cta-container">
+        <div class="cta">
+          <h4>Call to action! It's time!</h4>
+          <p>Sign up for our product by checking that button right over there!</p>
+        </div>
+        <button class="button" type="button">Sign up</button>
       </div>
     </section>
   </body>
