--- a/index.html
+++ b/index.html
@@ -62,5 +62,11 @@
         <button class="button" type="button">Sign up</button>
       </div>
     </section>
+
+    <section class="fifth-section">
+      <div class="footer">
+        <p>Copyright &copy The Odin Project 2021</p>
+      </div>
+    </section>
   </body>
 </html>
