--- a/index.html
+++ b/index.html
@@ -29,21 +29,23 @@
 
     <section class="second-section">
       <h2>Some random information</h2>
-      <div>
-        <div class="square"></div>
-        <p>This is some subtext under an illustration or image</p>
-      </div>
-      <div>
-        <div class="square"></div>
-        <p>This is some subtext under an illustration or image</p>
-      </div>
-      <div>
-        <div class="square"></div>
-        <p>This is some subtext under an illustration or image</p>
-      </div>
-      <div>
-        <div class="square"></div>
-        <p>This is some subtext under an illustration or image</p>
+      <div class="second-container">
+        <div class="square-box">
+          <div class="square"></div>
+          <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="square-box">
+          <div class="square"></div>
+          <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="square-box">
+          <div class="square"></div>
+          <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="square-box">
+          <div class="square"></div>
+          <p>This is some subtext under an illustration or image</p>
+        </div>
       </div>
     </section>
 
