--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
     <section class="third-section">
       <div class="testimonial">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p>-Thor, God of Thunder</p>
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="author">-Thor, God of Thunder</p>
       </div>
     </section>
 
