Added a second class to the button in 4th section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h4>Call to action! It's time!</h4>
           <p>Sign up for our product by checking that button right over there!</p>
         </div>
-        <button class="button" type="button">Sign up</button>
+        <button class="button cta-button" type="button">Sign up</button>
       </div>
     </section>
 
