Worked on the image in the hero section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quasi optio natus reprehenderit aspernatur tempore quas distinctio nihil itaque. Voluptatem, veritatis quas! A provident recusandae facere nesciunt dolor animi eius.</p>
           <button class="button" type="button">Sign up</button>
         </div>
-        <img src="" alt="image">
+        <div class="image"><img src="" alt="">This is a placeholder for an image</div>
       </div>
     </section>
 
